crates/dexo-tui/tests/snapshots/snapshots__snapshot_schema_editor_full.snap
---
source: crates/dexo-tui/tests/snapshots.rs
expression: "render_to_string(&model, 160, 50)"
---
demo  local  public                                                                                                                                             
┌  Sidebar─────────────────┐ scratch.sql ×  +                                                                                                                   
│[n]ew [e]dit [a]ctions    │┌▸ SQL · scratch.sql───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  ● local▾                ││   1▸select 1                                                                                                                     │
│>   ▸ public              ││                                                                                                                                  │
│      mysql.… [restricted]││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││             ┌Schema────────────────────────────────────────────────────────────────────┐                                         │
│                          ││             │schema table                                                              │                                         │
│                          ││             │> target: public.orders                                                   │                                         │
│                          ││             │  columns:                                                                │                                         │
│                          ││             │  defaults:                                                               │                                         │
│                          ││             │  indexes:                                                                │                                         │
│                          ││             │  constraints:                                                            │                                         │
│                          ││             │  foreign_keys:                                                           │                                         │
│                          ││             │error: columns are required                                               │                                         │
│                          ││             │                                                                          │                                         │
│                          ││             │ [Preview]   [Cancel]                                                     │                                         │
│                          ││             │  tab/arrows move  enter preview  esc cancel                              │                                         │
│                          ││             │                                                                          │                                         │
│                          ││             │                                                                          │                                         │
│                          ││             │                                                                          │                                         │
│                          ││             │                                                                          │                                         │
│                          ││             │                                                                          │                                         │
│                          ││             │                                                                          │                                         │
│                          ││             │                                                                          │                                         │
│                          ││             └──────────────────────────────────────────────────────────────────────────┘                                         │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌  Results─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                          ││[Grid] Explain  Messages                                                                                                          │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
local  Ctrl+J run  Ctrl+N new sql  Ctrl+W close                                                                                                       Ctrl+P  F1
