crates/dexo-tui/tests/snapshots/snapshots__snapshot_table_document_shows_the_grid.snap
---
source: crates/dexo-tui/tests/snapshots.rs
assertion_line: 239
expression: "render_to_string(&model, 160, 50)"
---
demo  local  public                                                                                                                                             
┌  Sidebar─────────────────┐ scratch.sql ×  orders ×  +                                                                                                         
│[n]ew [e]dit [a]ctions    │┌▸ Results─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│  ● local▾                ││[Grid] Explain  Messages                                                                                                          │
│>   ▸ public              ││WHERE w to filter                                                ORDER BY o to sort                                               │
│      mysql.… [restricted]││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          │└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
│                          │┌  Console─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
│                          ││                                                                                                                                  │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
local  Enter actions  i insert  Delete delete  v view  n/p page  Ctrl+W close                                                                         Ctrl+P  F1
