crates/dexo-tui/tests/snapshots/snapshots__snapshot_transfer_preview_progress_rejects-2.snap
---
source: crates/dexo-tui/tests/snapshots.rs
expression: "render_to_string(&model, 60, 20)"
---
demo  local  public          1 Sidebar  [2 SQL]  3 Results  
┌Transfer──────────────────────────────────────────────────┐
│export out.csv                                            │
│format=csv (Ctrl+F to cycle) strategy=Stop                │
│progress rows=10000 bytes=80000 running=true              │
│ [Submit]   [Cancel]                                      │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
│                                                          │
└──────────────────────────────────────────────────────────┘
local  Ctrl+J run  Ctrl+N new sql  Ctrl+W close   Ctrl+P  F1
