crates/dexo-tui/tests/snapshots/snapshots__snapshot_transfer_preview_progress_rejects.snap
---
source: crates/dexo-tui/tests/snapshots.rs
assertion_line: 220
expression: "render_to_string(&model, 100, 30)"
---
demo  local  public                                                                                 
┌  Sidebar─────────────────┐ scratch.sql ×  +                                                       
│[n]ew [e]dit [a]ctions    │┌▸ SQL · scratch.sql───────────────────────────────────────────────────┐
│  ● local▾                ││   1▸select 1                                                         │
│>   ▸ public              ││                                                                      │
│      mysql.u┌Import data───────────────────────────────────────────────────────────┐             │
│             │Import a CSV, TSV, JSON or JSON Lines file into a table on local.     │             │
│             │                                                                      │             │
│             │> File:     orders.csv                                        [Browse]│             │
│             │  Format:   csv                                                       │             │
│             │  Table:    orders                                                    │             │
│             │  On error: Skip the bad rows, write them to a file                   │             │
│             │preview:                                                              │             │
│             │id,name                                                               │             │
│             │1,ok                                                                  │             │
│             │2,BAD                                                                 │             │
│             │ [Import]   [Cancel]                                                  │─────────────┘
│             └──────────────────────────────────────────────────────────────────────┘─────────────┐
│                          ││[Grid] Explain  Messages                                              │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
│                          ││                                                                      │
└──────────────────────────┘└──────────────────────────────────────────────────────────────────────┘
local                                                                                     Ctrl+P  F1
